--- a/index.html
+++ b/index.html
@@ -68,14 +68,35 @@
         </div>
        </section>
        <!-- Design section -->
-      <section class="bg-slate-100 flex">
-        <div>
+      <section class="bg-slate-100 py-8 flex my-20">
+        <div class="">
+          <img src="images/Vector.png" alt="">
           <button class="bg-white px-4 py-2 rounded-3xl"><i class="fa-solid fa-arrow-right"></i>About Us </button>
+          <h1 class="font-bold text-4xl text-center">We design thoughtful, <br> 
+            liveable spaces</h1>
+            <p class="text-center"> The barn house captivates with its blend of rustic charm and <br> 
+              modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <div class="mx-32 py-5 px-5 my-9 bg-white rounded-3xl relative">
+                <img class="absolute" src="images/commercial.png" alt="">
+                <h2 class="pl-20">Commercial</h2>
+                <p class="pl-20">The barn house captivates with its blend 
+                  of rustic charm and modern</p>
+              </div>
+              <div class="mx-32 py-5 px-5 bg-white rounded-3xl relative">
+                <img class="absolute" src="images/residential.png" alt="">
+                <h2 class="pl-20">
+                  Residential
+                </h2>
+                <p class="pl-20">The barn house captivates with its blend 
+                  of rustic charm and modern</p>
+              </div>
         </div>
         <div>
           <img src="images/Rectangle.png" alt="">
         </div>
       </section>
+
+      <!-- Works Process Section -->
     </main>
     <footer>
 
