Latest portfolio section added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
        </section>
        <!-- Design section -->
-      <section class="bg-slate-100 py-8 flex my-20">
+      <section class="bg-slate-100 py-8 flex">
         <div class="">
           <img src="images/Vector.png" alt="">
           <button class="bg-white px-4 py-2 rounded-3xl"><i class="fa-solid fa-arrow-right"></i>About Us </button>
@@ -97,6 +97,85 @@
       </section>
 
       <!-- Works Process Section -->
+      <section class="bg-slate-100 pt-32 pb-32 text-center">
+        <h1 class="text-5xl font-extrabold pb-7">Our Works Process</h1>
+        <p>
+          The barn house captivates with its blend of rustic charm and modern sophistication, 
+          featuring weathered wood, sleek metal accents
+        </p>
+        <div class="flex gap-6 mt-10 justify-center mx-24 pt-5">
+
+          <div class="bg-rose-200 rounded-2xl px-4 py-10 shadow-xl">
+            <img src="images/concept.png" alt="">
+            <h2 class="font-bold">Concept</h2>
+            <p>The barn house captivates 
+              with its blend of rustic charm 
+              and modern.</p>
+          </div>
+          <div class="bg-amber-200 rounded-2xl px-4 py-10 shadow-xl">
+            <img src="images/flow-chart.png" alt="">
+            <h2 class="font-bold">Design Process</h2>
+            <p>The barn house captivates 
+              with its blend of rustic charm 
+              and modern.</p>
+          </div>
+          <div class="bg-emerald-200 rounded-2xl px-4 py-10 shadow-xl">
+            <img src="images/vision.png" alt="">
+            <h2 class="font-bold">Supervision</h2>
+            <p>The barn house captivates 
+              with its blend of rustic charm 
+              and modern</p>
+          </div>
+          <div class="bg-cyan-200 rounded-2xl px-4 py-10 shadow-xl">
+            <img src="images/budget-planning.png" alt="">
+            <h2 class="font-bold">Budget Planning</h2>
+            <p> The barn house captivates 
+              with its blend of rustic charm 
+              and modern.</p>
+          </div>
+        </div>
+      </section>
+      <!-- Our Latest Portfolio -->
+      <section>
+        <h1 class="text-5xl text-center font-extrabold pt-20"> Our Latest Portfolio</h1>
+        <p class="py-14 text-center">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents</p>
+        <div>
+          <div class="grid grid-cols-2">
+            <div class="flex border rounded-xl mx-24 w-full">
+              <img class="py-3 pl-3" src="images/img1.png" alt="">
+              <div class="content-center mx-10">
+                <h2 class="font-bold text-2xl">Commercial</h2>
+              <p>The barn house captivates with its blend of rustic charm 
+                and modern. The barn house captivates with its blend of 
+                rustic charm and modern </p>
+              <button class="font-bold text-2xl">View Details <i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
+              </div>
+             </div>
+             <div class="border rounded-xl mx-36 pl-2 py-2">
+              <img src="images/img2.png" alt="">
+             </div>
+          </div>
+          <div class="flex flex-row py-7">
+            <div class="border ml-24 mr-7 px-2 py-2 rounded-xl"> 
+              <img class="w-full h-48" src="images/img3.png" alt="">
+             </div>
+             <div class="border flex">
+              <img class="py-3 pl-3" src="images/img4.png" alt="">
+             <div class="content-center mx-10">
+              <h2 class="font-bold text-2xl">Commercial</h2>
+              <p>The barn house captivates with 
+                its blend of rustic charm and 
+                modern.</p>
+                <button class="font-bold text-2xl">View Details <i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
+             </div>
+             </div>
+             <div class="border rounded-xl mx-10 mr-32 px-3 py-2">
+              <img class="w-full h-48" src="images/img5.png" alt="">
+             </div>
+          </div>
+        </div>
+      </section>
+      <!-- Form Section -->
     </main>
     <footer>
 
