--- a/index.html
+++ b/index.html
@@ -242,8 +242,25 @@
         </div>
        </section>
     </main>
-    <footer>
 
+    <!-- Footer Section -->
+    <footer class="bg-slate-800">
+      <div>
+        
+        <h2 class="font-bold text-center text-2xl text-white py-8"><i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i>Rinterio</h2>
+        <p> The barn house captivates with its blend of rustic charm and modern sophistication, 
+          featuring weathered wood, sleek metal accents</p>
+      </div>
+      <div class="flex gap-5 text-white justify-center">
+        <p>Home</p>
+        <p>Services</p>
+        <p>Portfolio</p>
+        <p>Blogs</p>
+        <p>Contact Us</p>
+      </div>
+      <div class="text-center my-8 py-8">
+        <button class="bg-gradient-to-r from-lime-400 to-lime-300 px-4 py-2 rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
     </footer>
 </body>
 </html>
