Some styles changed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="flex justify-around bg-slate-50 py-5">
         <!-- Navbar -->
         <div class="flex">
-            <i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i>
+            <i class="-rotate-45 py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i>
             <h2 class="font-bold px-3 text-2xl">Rinterio</h2>
         </div>
         <div class="flex gap-5">
@@ -44,7 +44,7 @@
         <div>
           <i class="bg-white py-3 px-3 rounded-full fa-solid fa-magnifying-glass"></i>
           <i class="bg-white py-3 px-3 rounded-full mx-3 fa-solid fa-cart-shopping"></i>
-          <button class="bg-gradient-to-r from-lime-400 to-lime-300 px-4 py-2 rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right"></i></button>
+          <button class="bg-gradient-to-r from-lime-400 to-lime-300 px-4 py-2 rounded-3xl">Book Consult <i class="-rotate-45 fa-solid fa-arrow-right"></i></button>
         </div>
     </header>
     <main>
@@ -63,15 +63,15 @@
             accents, and large windows that flood the space with natural light
           </p>
           <div class="text-center">
-            <button class="bg-lime-200 py-3 px-7 rounded-3xl "> View Details <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="bg-lime-200 py-3 px-7 rounded-3xl my-12"> View Details <i class="-rotate-45 fa-solid fa-arrow-right"></i></button>
           </div>
         </div>
        </section>
-       <!-- Design section -->
+       <!-- About us section -->
       <section class="bg-slate-100 py-8 flex">
         <div class="">
           <img src="images/Vector.png" alt="">
-          <button class="bg-white px-4 py-2 rounded-3xl"><i class="fa-solid fa-arrow-right"></i>About Us </button>
+          <button class="bg-white px-4 py-2 rounded-3xl"><i class="-rotate-45 fa-solid fa-arrow-right"></i>About Us </button>
           <h1 class="font-bold text-4xl text-center">We design thoughtful, <br> 
             liveable spaces</h1>
             <p class="text-center"> The barn house captivates with its blend of rustic charm and <br> 
@@ -98,6 +98,7 @@
 
       <!-- Works Process Section -->
       <section class="bg-slate-100 pt-32 pb-32 text-center">
+        <button class="bg-white px-4 py-2 rounded-3xl my-5"><i class="-rotate-45 fa-solid fa-arrow-right"></i>How we works </button>
         <h1 class="text-5xl font-extrabold pb-7">Our Works Process</h1>
         <p>
           The barn house captivates with its blend of rustic charm and modern sophistication, 
@@ -136,7 +137,8 @@
         </div>
       </section>
       <!-- Our Latest Portfolio -->
-      <section>
+      <section class="sm:grid grid-cols-1">
+        <button class="bg-lime-100 px-4 py-2 my-7 mx-32 rounded-3xl"><i class="-rotate-45 fa-solid fa-arrow-right"></i> Explore our Latest works </button>
         <h1 class="text-5xl text-center font-extrabold pt-20"> Our Latest Portfolio</h1>
         <p class="py-14 text-center">The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents</p>
         <div>
@@ -148,7 +150,7 @@
               <p>The barn house captivates with its blend of rustic charm 
                 and modern. The barn house captivates with its blend of 
                 rustic charm and modern </p>
-              <button class="font-bold text-2xl">View Details <i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
+              <button class="font-bold text-2xl">View Details <i class="-rotate-45 py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
               </div>
              </div>
              <div class="border rounded-xl mx-36 pl-2 py-2">
@@ -166,7 +168,7 @@
               <p>The barn house captivates with 
                 its blend of rustic charm and 
                 modern.</p>
-                <button class="font-bold text-2xl">View Details <i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
+                <button class="font-bold text-2xl">View Details <i class="-rotate-45 py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i></button>
              </div>
              </div>
              <div class="border rounded-xl mx-10 mr-32 px-3 py-2">
@@ -177,7 +179,8 @@
       </section>
       <!-- Form Section -->
        <section class="bg-slate-200">
-        <div class="">
+        <div class="text-center">
+          <button class="bg-white px-4 py-2 rounded-3xl mt-20"><i class="-rotate-45 fa-solid fa-arrow-right"></i> Let’s Connect </button>
           <h1 class="text-5xl text-center font-extrabold my-9 pt-10">Lets Discuss Next Project</h1>
           <p class="py-7">The barn house captivates with its blend of rustic charm and modern sophistication, 
             featuring weathered wood, sleek metal accents</p>
@@ -247,11 +250,11 @@
     <footer class="bg-slate-800">
       <div>
         
-        <h2 class="font-bold text-center text-2xl text-white py-8"><i class=" py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i>Rinterio</h2>
-        <p> The barn house captivates with its blend of rustic charm and modern sophistication, 
+        <h2 class="font-bold text-center text-2xl text-white py-8"><i class="-rotate-45 py-3 bg-lime-300 rounded-full px-3 fa-solid fa-arrow-right"></i> Rinterio</h2>
+        <p class="text-white text-center pb-5"> The barn house captivates with its blend of rustic charm and modern sophistication, 
           featuring weathered wood, sleek metal accents</p>
       </div>
-      <div class="flex gap-5 text-white justify-center">
+      <div class="flex gap-5 text-white justify-center pt-5">
         <p>Home</p>
         <p>Services</p>
         <p>Portfolio</p>
@@ -259,7 +262,7 @@
         <p>Contact Us</p>
       </div>
       <div class="text-center my-8 py-8">
-        <button class="bg-gradient-to-r from-lime-400 to-lime-300 px-4 py-2 rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right"></i></button>
+        <button class="bg-gradient-to-r from-lime-400 to-lime-300 px-4 py-2 rounded-3xl">Book Consult <i class="-rotate-45 fa-solid fa-arrow-right"></i></button>
       </div>
     </footer>
 </body>
